tests/ui/lifetimes/re-empty-in-error.stderr
error: higher-ranked subtype error
  --> $DIR/re-empty-in-error.rs:7:5
   |
LL |     foo(&10);
   |     ^^^^^^^^

error: aborting due to 1 previous error

